--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,151 +1,224 @@
-
 *{
     margin: 0%;
     padding: 0%;
-    }
-    
-    body{
+}
+
+body{
     background-color: #c3c8d4;
     margin: 0%;
     background-size: auto;
     height: 100%;
-    }
+}
+
+html,body{
+    margin: 0%;    
+    height:100%;    
+}
+
+.yearList {
+    margin: auto;
+    top: 7px;
+    height: 2.4vw;
+   display: block;
+    font-size: 0.9rem;
+    padding: 4px;
+    width: 200px;
+    border: 1px solid #2a50e3;
+    background-color: #1e3261;
+    font-family: 'Source Sans Pro', sans-serif; 
+    color: #a1bfd2;
+   
+}
+.base{
+    border:none;
+    height: 5rem;
     
-    html,body{
-    margin: 0%; 
-    height:100%; 
-    }
-    .headF{
-    top: 78px;
-    text-align: center;
+}
+
+
+
+header{
+    height: 120px;
+    width: 100%;
+    box-sizing: border-box;
+    background-image: url(../imagenes/cabecera.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    box-sizing: border-box;
+    display: block;
+    
+}
+
+.flag img{
+    height: 4vw;
+    margin-top: 20%;
+    top: 0;
+    width: auto;
+    left:0;
+    margin-left: 70%;
+}
+
+.headF{
+    top:80px;
     width: 100%;
     z-index: 2;
     position: absolute;
-    color: white;
-    letter-spacing: 0.1rem;
-    font-family: 'Cinzel', serif;
-    
-    }
-    
-    @media only screen and (min-width:658){
-    .headF .description{
-    font-size: 1rem;
-    }
-    }
-    
-    @media only screen and (max-width:657){
-    .headF{
-    font-size: 0.5rem;
-    }
-    }
-    
-   
-    .bars1 img, .bars2 img{
-    height: 1.2rem;
-    width:auto;
-    }
-    
-    header{
-    height: 200px;
-    width: 100%;
     box-sizing: border-box;
-    }
-    
-    .head img{
-    height: 120px;
-    width: 100%;
-    padding: 0%;
-    margin: 0%;
-    left: 0;
-    right: 0;
-    z-index: 1;
-    position: absolute;
-    }
+   
+ 
+}
+
+.calc{
+    margin-top: 4.2%;
+}
+
+.ranking, .list, .media{
+   
+    font-size: 1vw;
+    padding: 4px 15px;
+    display: inline;
+    border: 1px solid #2a50e3;
+    font-family: 'Source Sans Pro', sans-serif; 
+    border-radius: 4px;
+    text-decoration: none !important;
+    background-color: #1e3261;
+   
+    color: #a1bfd2;
      
-    section{
-    height: 300px;
-    }
+}
+
+
+
+
+
+.bar img{
+height: 3.26vw;
+
+width: auto;
+top:0;
+left:0;
+right: 0;
+
+
+}
+
+.headsBack{
+    height: 160px;
   
-    .titleHead{ 
-    color: white;
-    margin-left:0%;
-    left: 1%;
-    z-index: 4; 
-    position: absolute;
-    }
-    
-    .flag img{
-    height: 2rem;
-    top:11px;
-    width: auto;
-    z-index: 3;
-    position: absolute;
-    margin-left:850%;
-    }
-    
-      
-    .headBack{
+ }
+
+.headBack{
     background-color: #a1bfd2;
     width:100%;
     height: 80px;
-    top:103px;
     left: 0;
     right: 0;
-   text-align: center;
-    box-shadow: 0px 0px 2px black inset; 
+     text-align: center;
+    box-shadow: 0px 0px 2px  black inset;    
     box-sizing: border-box;
+    color: #1e3261;
+
     }
+
   
-    .byYear{
-    height: 0.05rem;
+   
+    .byYear, .byYear1{
+        height: 0.05rem;
+         font-size: 1.2vw;
+        text-align: center;        
+        font-family: 'Source Sans Pro', sans-serif; 
     }
+
   
-    .yearList .btn{
-    height: 30px;
-    font-size: 0.9rem;
-    padding: 1px;
-    width: 70px;
-    }
-  
-    .graphic{
+
+.graphics{
+    height: 17rem;
+    font-family: 'Source Sans Pro', sans-serif; 
+    color: #1e3261;
+
+}
+
+.graphic{
     margin: auto;
+    font-family: 'Source Sans Pro', sans-serif; 
     background-color: #a1bfd2;
-    height: 18rem;
-    top:50px; 
+    height: 17rem;
+    top:10px;   
     bottom: 0;
     border: 1px solid #1e3261;
     box-sizing: border-box;
-    }
-  
-    .titles{
+}
+.titles{
     background-color: #1e3261;
     width: 100%;
-    margin-left:0%;
+  margin-left:0%;
     margin:0;
-    padding: 5px;
-    left:0;
-    right: 0;
+  padding: 5px;
+  left:0;
+  right: 0;
+  font-family: 'Source Sans Pro', sans-serif; 
+  color: #a1bfd2;
+  text-align: center;
+  box-sizing: border-box;
+  font-size: 1.2vw;
+
+}
+
+.modalTitle{
+font-family: 'Cinzel', serif;
+color: white;
+text-align: center;
+font-size: 2.3vw;
+padding: 10px;
+}
+
+.modalContent{
+    background-color: #c3c8d4;
     font-family: 'Source Sans Pro', sans-serif; 
+    background-size: 10% ;
+    background-repeat: no-repeat;
+   
+}
+
+.modalHeader{
+    background-image: url(../imagenes/cabecera.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
+
+.modalButton{
     color: #a1bfd2;
-    text-align: center;
-    box-sizing: border-box;
-    
-    }
-      
-    .base{
+    background-color: #1e3261;
+    border:white;
+}
+
+.modalButton :hover{
+    color: #1e3261;
+    background-color: white;
+    border:white;
+}
+
+
+
+.prevention{
     display: none;
-    border: 1px solid black;
+    color: #1e3261;
     margin:auto;
     bottom: 0;
-    top:400px;
-    height: 14rem;
-    width: 100%;
+    top: 0;
+    font-family: 'Source Sans Pro', sans-serif; 
+    width: 94%;
     box-sizing:border-box;
-    text-align: center;
-    }
+    text-align: justify;
+
+}
+
+
+/* pie de pagina - inicio */
     
-    
-    .social-sharing {
+
+
+.social-sharing {
     display: block;
     position: fixed;
     width: 100%;
@@ -154,8 +227,8 @@
     z-index: 4;
     background-image: url(../imagenes/footer.png);
     background-size: 80%;
-    }
-    .social-sharing ul.menu-social {
+}
+.social-sharing ul.menu-social {
     list-style: none;
     text-align: center;
     margin: 0;
@@ -167,32 +240,35 @@
     -webkit-flex-wrap: nowrap;
     -ms-flex-wrap: nowrapwrap;
     flex-wrap: nowrap;
-    }
-    .social-sharing ul.menu-social li {
+}
+
+.social-sharing ul.menu-social li {
     flex: 0 1 40px;
     height: 40px;
-    }
-    .social-sharing ul.menu-social li.newsletter {
+}
+.social-sharing ul.menu-social li.newsletter {
     flex: 1 1 auto;
     line-height: 40px;
     position: relative;
     color:white;
-    }
-    .social-sharing li.labo img{
-    height: 1.8rem;
-    left: 0;
-    right: 3%;
-    top: 0;
-    bottom: 0;
-    margin:0;
-    text-align: center;
-    margin-right: 2%; 
-    }
+}
+    .social-sharing  li.labo img{
+        height: 1.8rem;
+        left: 0;
+        right: 3%;
+        top: 0;
+        bottom: 0;
+       margin:0;
+        text-align: center;
+        margin-right: 2%;           
     
-    .social-sharing ul.menu-social li.next {
+}
+
+
+.social-sharing ul.menu-social li.next {
     flex: 1 1 auto;
-    }
-    ul.menu-social li a::before {
+}
+ul.menu-social li a::before {
     content: "\f135";
     display: inline-block;
     font-family: FontAwesome;
@@ -201,46 +277,50 @@
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     line-height: 40px;
-    }
-    ul.menu-social li a[href*="facebook.com"]::before {
+}
+ul.menu-social li a[href*="facebook.com"]::before {
     content: "\f09a";
-    }
-    ul.menu-social li a[href*="twitter.com"]::before {
+}
+ul.menu-social li a[href*="twitter.com"]::before {
     content: "\f099";
-    }
-    ul.menu-social li a[href*="pinterest.com"]::before {
+}
+ul.menu-social li a[href*="pinterest.com"]::before {
     content: "\f231";
-    }
-    ul.menu-social li a[href*="whatsapp://send"]::before {
+}
+ul.menu-social li a[href*="whatsapp://send"]::before {
     content: "\f232";
-    }
+}
+
+
+.foot img{
+
+padding: 0%;
+width: 100%;
+height: 50px;
+margin-bottom: 0%; 
+z-index: 1;
+position: fixed;
+}
+footer{
+
+bottom: 0;
+right: 0;
+
+
+margin-bottom: 0%;
+position: absolute;
+left: 0;
+bottom: 0;
+width: 100%;
+height: 50px;
+box-sizing: border-box;
+}
+
+/* fin pie de pagina*/
+
+  
     
-    .foot img{
-    padding: 0%;
-    width: 100%;
-    height: 50px;
-    margin-bottom: 0%; 
-    z-index: 1;
-    position: fixed;
-    }
-    footer{
-    bottom: 0;
-    right: 0;
-    margin-bottom: 0%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    height: 50px;
-    box-sizing: border-box;
-    }
-    
-    .copyRight{
-    z-index: 3;
-    position: abs
-    }
-    
-    
+/* menu navegacion-inicio*/ 
     
     nav{
     background: none;
@@ -292,29 +372,11 @@
     nav li:hover > ul{
     display: block;
     }
-     
-    .menuNav{
-        z-index: 4;
-    position: absolute;
-    }
+     /* menu navegacion fin*/
     
     /***************************queries***************************/
     @media only screen 
     and (min-width : 767px) {
     .iconNav{display:none;
     }
-    
-    }
-    
-    @media only screen and (max-width:657){
-    .headF{
-    font-size: 0.5rem;
-    }
-    }
-
-    .modal-dialog {
-        width: 800px;
-        margin: 30px auto;
-    }
-    
-   
+    }   
